--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
     .slide {
       @apply absolute pt-0 px-2 md:px-5 py-[30px] h-[38px] md:h-[48px] md:translate-y-1 translate-y-0 overflow-hidden;
     }
+    .card-border {
+      @apply border border-black-100 bg-black-100;
+    }
   }
 }
 
@@ -215,8 +218,6 @@
   }
 }
 
-
-
 /* Hero text slider starts */
 .slide {
   display: inline-block;
@@ -287,4 +288,53 @@
     rgba(0, 0, 0, 1) 0%,
     rgba(255, 255, 255, 0) 100%
   );
+}
+
+.card {
+  --start: 0;
+  position: relative;
+  z-index: 40;
+  overflow: hidden;
+  transition: border-color 1s ease-in-out;
+}
+
+.card::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 12px;
+  border: 2px solid transparent;
+  background: var(--gradient);
+  background-attachment: fixed;
+  mask: linear-gradient(#0000, #0000),
+    conic-gradient(
+      from calc((var(--start) - 15) * 1deg),
+      #ffffff1f 0deg,
+      white,
+      #ffffff00 100deg
+    );
+  mask-composite: intersect;
+  mask-clip: padding-box, border-box;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+
+.glow {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  filter: blur(10px);
+  filter: saturate(200);
+}
+
+.card:hover::before {
+  opacity: 1;
 }
