--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,33 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .exp-card-wrapper {
+    @apply flex flex-col-reverse xl:flex-row xl:gap-20 gap-10  justify-between;
+  }
+
+  .gradient-edge {
+    @apply w-36 h-full absolute bottom-0 z-20;
+  }
+  .timeline-wrapper {
+    @apply absolute top-0 xl:left-[23vw] md:left-12 left-5 h-full flex justify-center;
+  }
+
+  .timeline {
+    @apply absolute z-30 h-[110%] -top-10  w-14 md:w-28 bg-primary;
+  }
+
+  .timeline-logo {
+    @apply md:w-[80px] md:h-[80px] w-[40p] h-[40px] flex-none rounded-full flex justify-center items-center md:-translate-y-7 border border-black-100 bg-black-100;
+  }
+  .card-border {
+    @apply border border-black-100 bg-black-100;
+  }
+  .hero-badge {
+    @apply bg-black-200 py-2 px-4 rounded-full w-fit text-sm md:text-base;
+  }
+}
+
 @layer components {
   .hero-text {
     @apply flex flex-col justify-center md:text-[35px] text-[25x] font-semibold relative z-10 pointer-events-none;
@@ -13,10 +40,10 @@
     .slide {
       @apply absolute pt-0 px-2 md:px-5 py-[30px] h-[38px] md:h-[48px] md:translate-y-1 translate-y-0 overflow-hidden;
     }
-    .card-border {
-      @apply border border-black-100 bg-black-100;
-    }
   }
+}
+:root {
+  --gradient: radial-gradient(circle, #e5e5e5 0%, #fff 100%);
 }
 
 * {
